--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@
 	top:0; 
     left:0;
     right:0;
-    height:auto;
+    height:50px;
     position:fixed;
 	margin-right:auto;
 	margin-bottom:20px;
