--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@
 	top:0; 
        left:0;
     right:0;
-    height:1px;
+    height:auto;
     position:fixed;
 	margin-right:auto;
 	margin-bottom:20px;
