--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
   font-style: normal;
 }
   body {
-    background-color:red;
+    background-color:white;
 	margin:0px;
 	overflow-x: hidden;
 	width:100vw;
@@ -34,10 +34,10 @@
 	top:0; 
        left:0;
     right:0;
-    height:0;
+    height:auto;
     position:fixed;
 	margin-right:auto;
-	margin-bottom:20px;
+	
 	background-color:white;
 	}
   header img {
