--- a/styles.css
+++ b/styles.css
@@ -806,7 +806,7 @@ form{
 
 
 /****************------------------------------------------------------------************************************************************************/
-@media all and (max-device-width: 480px){
+@media all and (max-width: 480px){
  /****0-MENU--***/
 header{
 	display:block;
