--- a/styles.css
+++ b/styles.css
@@ -979,7 +979,7 @@ form{
 
 
 
-@media all and  (min-device-width: 480px) and (max-width: 704px){ 
+@media all and  (min-width: 480px) and (max-width: 704px){ 
 .slider-text{
 	margin-top: 38%;
 	margin-left:15%;
@@ -1011,15 +1011,7 @@ form{
 	
 }
 
-@media all and (max-width: 370px){
-	form{
-    position:relative;
-    padding: 0 5px;
-    margin: 0 5px;
-    width: 75%;
-    right: 0;
-	}
-}
+
 		
 		
 		
