--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,22 @@
 @font-face {
     font-family:'robotoregular';
-    src: url('P1_04_fonts/Roboto-Regular.ttf') format('truetype');
+    src: url('fonts/Roboto-Regular.ttf') format('truetype');
 }
 
 @font-face {
     font-family:'robotothin';
-    src: url('P1_04_fonts/Roboto-Thin.ttf') format('truetype');
+    src: url('fonts/Roboto-Thin.ttf') format('truetype');
      }
 
 @font-face {
     font-family:'robotobold';
-    src: url('P1_04_fonts/Roboto-Bold.ttf') format('truetype');
+    src: url('fonts/Roboto-Bold.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../P1_04_fonts/fontawesome-webfont.eot?v=4.6.3');
-  src: url('../P1_04_fonts/fontawesome-webfont.eot?#iefix&v=4.6.3') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.6.3') format('woff2'), url('../P1_04_fonts/fontawesome-webfont.woff?v=4.6.3') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.6.3') format('truetype'), url('../P1_04_fonts/fontawesome-webfont.svg?v=4.6.3#fontawesomeregular') format('svg');
+  src: url('../fonts/fontawesome-webfont.eot?v=4.6.3');
+  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.6.3') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.6.3') format('woff2'), url('../P1_04_fonts/fontawesome-webfont.woff?v=4.6.3') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.6.3') format('truetype'), url('../P1_04_fonts/fontawesome-webfont.svg?v=4.6.3#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
   }
